# claude-quickstarts

./: .gitignore  AGENTS.md
cn-linux-computer-use-demo/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cn-linux-computer-use-demo/scripts/: deploy.sh  llm_screenshot_describe.py  provider_info.py  provision_direct_vm.sh  provision_ubuntu_vm.sh  run_local_api.sh  run_visible_vm_api.sh  start_desktop_api.sh  sync_to_vm.sh
cn-linux-computer-use-demo/src/cn_linux_cu_demo/: __init__.py  action_parser.py  agent_loop.py  provider.py  schemas.py  server.py  trace.py
cn-linux-computer-use-demo/src/cn_linux_cu_demo/backends/: base.py  pyautogui_x11.py
cn-linux-computer-use-demo/src/cn_linux_cu_demo/models/: base.py  qwen.py
cn-linux-computer-use-demo/tests/: test_action_parser.py
research/: Codex Computer Use 背后的操作机制-去掉demo演示.md  osworld-qwen-architecture-feishu-blank.xml  osworld-qwen-architecture-feishu.xml  osworld-qwen-architecture.md
