[project]
name = "cn-linux-computer-use-demo"
version = "0.1.0"
description = "Thin Linux computer-use harness for domestic multimodal models."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "mss>=9.0",
  "pillow>=10.0",
  "pydantic>=2.7",
  "pyautogui>=0.9.54",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
